--- a/ocaml-probes.opam
+++ b/ocaml-probes.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.15.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/ocaml-probes"
@@ -11,7 +12,7 @@ build: [
 ]
 depends: [
   "ocaml" {>= "4.11.0"}
-  "dune" {>= "2.0.0"}
+  "dune"  {>= "2.0.0"}
   "owee"
 ]
 synopsis: "USDT probes for OCaml: command line tool"
