--- a/ocaml-probes.opam
+++ b/ocaml-probes.opam
@@ -12,10 +12,11 @@ build: [
 depends: [
   "ocaml" {>= "4.11.0"}
   "dune" {>= "2.0.0"}
-  "owee"
+  "owee" {>= "0.4"}
 ]
 synopsis: "USDT probes for OCaml: command line tool"
 description: "
 A tool for controlling user-space statically-defined tracing probes for OCaml.
 Experimental.
 "
+depexts: ["linux-headers"] {os-family = "alpine"}
