--- a/ocaml-probes.opam
+++ b/ocaml-probes.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "2.0.0"}
   "owee" {>= "0.4"}
 ]
+available: arch != "arm32" & arch != "x86_32"
 synopsis: "USDT probes for OCaml: command line tool"
 description: "
 A tool for controlling user-space statically-defined tracing probes for OCaml.
