--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,10 @@
-(executables (names probes)
+(executables
+ (modes byte exe)
+ (names probes)
  (libraries probes_lib core_unix.command_unix core_unix.filename_unix core)
- (preprocess (pps ppx_jane)))
+ (preprocess
+  (pps ppx_jane)))
 
-(alias (name DEFAULT) (deps probes.ml.pp))
+(alias
+ (name DEFAULT)
+ (deps probes.ml.pp))
