--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,6 @@
-(executables (names test_trace test_attach) (libraries probes_lib_test)
- (preprocess (pps ppx_jane)))
+(executables
+ (modes byte exe)
+ (names test_trace test_attach)
+ (libraries probes_lib_test)
+ (preprocess
+  (pps ppx_jane)))
