--- a/ocaml-probes.opam
+++ b/ocaml-probes.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.17.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/ocaml-probes"
@@ -11,8 +12,8 @@ build: [
 ]
 depends: [
   "ocaml" {>= "5.1.0"}
-  "dune" {>= "3.11.0"}
-  "owee" {>= "0.4"}
+  "dune"  {>= "3.11.0"}
+  "owee"  {>= "0.4"}
 ]
 synopsis: "USDT probes for OCaml: command line tool"
 description: "
