--- a/test/many_tracees/dune
+++ b/test/many_tracees/dune
@@ -2,7 +2,7 @@
  (modes byte exe)
  (names test_tracer)
  (modules test_tracer)
- (libraries probes_lib_test)
+ (libraries probes_lib probes_lib_test unix)
  (preprocess
   (pps ppx_jane)))
 
