--- a/test/fork/dune
+++ b/test/fork/dune
@@ -24,19 +24,13 @@
   (bash "./dead_parent.exe > %{targets}")))
 
 (rule
- (alias runtest)
  (deps control_child.expected control_child.corrected)
  (action
-  (bash "diff -u control_child.expected control_child.corrected")))
+  (bash "diff -u control_child.expected control_child.corrected"))
+ (alias runtest))
 
 (rule
- (alias runtest)
  (deps child_self.expected child_self.corrected)
  (action
-  (bash "diff -u child_self.expected child_self.corrected")))
-
-(rule
- (alias runtest)
- (deps dead_parent.expected dead_parent.corrected)
- (action
-  (bash "diff -u dead_parent.expected dead_parent.corrected")))
+  (bash "diff -u child_self.expected child_self.corrected"))
+ (alias runtest))
